[package]
name = "timesince-rs"
version = "0.3.0"
authors = ["Mikko Tanner <mikko.tanner@gmail.com>"]
description = "Time since UNIX epoch and time-related datatype conversions"
readme = "README.md"
repository = "https://github.com/Ukko-Ylijumala/timesince-rs"
license = "MIT OR Apache-2.0"
categories = ["algorithms"]
keywords = ["time", "date", "duration", "epoch", "timestamp", "conversion"]
publish = false
edition = "2021"
