[package]
name = "timesince"
version = "0.3.2"
authors = ["Mikko Tanner <mikko.tanner@gmail.com>"]
description = "Time since UNIX epoch and time-related datatype conversions"
readme = "README.md"
repository = "https://github.com/Ukko-Ylijumala/timesince-rs"
license = "MIT OR Apache-2.0"
categories = ["algorithms"]
keywords = ["time", "date", "duration", "epoch", "timestamp", "conversion"]
publish = false
edition = "2021"

[dependencies.serde]
version = "1.0"
features = ["derive"]
